--- a/hello_world/pubspec.yaml
+++ b/hello_world/pubspec.yaml
@@ -28,6 +28,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  audioplayers: ^6.1.1
   flutter:
     sdk: flutter
 
@@ -66,6 +67,7 @@ flutter:
     - assets/sounds/numbers/
     - assets/sounds/colors/
     - assets/sounds/family_members/
+    
     - assets/sounds/phrases/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
